Move Samples/PixelStreaming/WebServers/SignallingWebServer/public/ to Samples/PixelStreaming/WebServers/SignallingWebServer/www/ Fix css in overlay player not aligning. Fix stresstest not auto-playing video.
#JIRA none
#robomerge[starship] -UE5
#rb self
#fyi Marco.Anastasi
#lockdown Mitchell.Wilson

[CL 18015222 by Luke Bermingham in 4.27 branch]

--- a/Samples/PixelStreaming/WebServers/SignallingWebServer/www/player.css
+++ b/Samples/PixelStreaming/WebServers/SignallingWebServer/www/player.css
@@ -284,6 +284,10 @@ img#playButton{
   background: none;
 }
 
+.tgl-slider {
+	float:right;
+}
+
 .tgl + .tgl-slider {
   outline: 0;
   display: block;
@@ -346,14 +350,25 @@ img#playButton{
 	padding-left: 5%;
 }
 
-select {
+#encoder-params-submit {
 	float: right;
+}
+
+#webrtc-params-submit {
+	float: right;
+}
+
+select {
 	text-align: right;
 }
 
 input {
-	float: right;
 	text-align: right;
+}
+
+.form-group {
+	display: grid;
+	grid-template-columns: 50% 50%;
 }
 
 .form-group label {
@@ -368,7 +383,6 @@ input {
 }
 
 #latencyTest button {
-	float: right;
 	margin: 30px 0px;
 }
 
